--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Second Final Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header>
         <nav id="nav-bar">
             <div class="logo">
-                <img src="IMAGES/Logo.png"">
+                <img src="IMAGES/Logo.png">
             </div>
             <div id="home-btns">
                 <ul>
