fixed bug for nav

--- a/index.html
+++ b/index.html
@@ -1,50 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Second Final Project</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav id="nav-bar">
-            <div class="logo">
-                <img src="IMAGES/Logo.png">
-            </div>
-            <div id="home-btns">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Service</a></li>
-                    <li><a href="">Features</a></li>
-                    <li><a href="">Product</a></li>
-                    <li><a href="">Testimonial</a></li>
-                    <li><a href="">FAQ</a></li>
-                </ul>
-            </div>
-            <div class="login-section">
-                    <a href="">Login</a>
-                    <button class="btn">Sign up</button>
-            </div>
-        </nav>
+      <nav id="nav-bar">
+        <div class="logo">
+          <img src="IMAGES/Logo.png" />
+        </div>
+        <div id="home-btns">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Service</a></li>
+            <li><a href="">Features</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">Testimonial</a></li>
+            <li><a href="">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="login-section">
+          <a href="">Login</a>
+          <button class="btn">Sign up</button>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <div id="hero-section">
-            <div class="hero-text">
-                <h1>Lessons and insights</h1>
-                <h2>from 8 years</h2>
-                <h5>Where to grow your business as a photographer: site or social media?</h5>
-                <button>Register</button>
-            </div>
-            <div>
-                <img src="IMAGES/Illustration.png" alt="">
-            </div>
+      <div id="hero-section">
+        <div class="hero-text">
+          <h1>Lessons and insights</h1>
+          <h2>from 8 years</h2>
+          <h5>
+            Where to grow your business as a photographer: site or social media?
+          </h5>
+          <button>Register</button>
         </div>
+        <div>
+          <img src="IMAGES/Illustration.png" alt="" />
+        </div>
+      </div>
+
+      <div id="community">
+        <div class="comm-header">
+          <h1>Manage your entire community</h1>
+          <h1>in a single system</h1>
+          <p>Who is Nextcent suitable for?</p>
+        </div>
+
+        <div class="comm">
+          <div class="comm-house">
+            <img src="IMAGES/Icon (3).png" alt="" />
+            <h2>Membership</h2>
+            <h2>Organisations</h2>
+            <div class="comm-text">
+              <p>
+                Our membership management software provides full automation of
+                membership renewals and payments
+              </p>
+            </div>
+          </div>
+
+          <div class="comm-house">
+            <div>
+              <img src="IMAGES/Icon (1).png" alt="" />
+              <h2>National</h2>
+              <h2>Associations</h2>
+            </div>
+
+            <div class="comm-text">
+              <p>
+                Our membership management software provides full automation of
+                membership renewals and payments
+              </p>
+            </div>
+          </div>
+
+          <div class="comm-house">
+            <div>
+              <img src="IMAGES/Icon (2).png" alt="" />
+              <h2>Clubs And</h2>
+              <h2>Groups</h2>
+            </div>
+
+            <div class="comm-text">
+              <p>
+                Our membership management software provides full automation of
+                membership renewals and payments
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div id="unlock">
+          <div>
+            <img src="IMAGES/rafiki.png" alt="" />
+          </div>
+
+          <div class="unlock-text">
+            <h1>The unseen of spending three years at Pixelgrade</h1>
+
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+              amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+              Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+              tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+              Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+              elementum pulvinar odio.
+            </p>
+
+            <button><a href="">Learn More</a></button>
+          </div>
+        </div>
+
+        <!-- <div id="achievements">
+          <div class="arch-text">
+            <h2>Helping a local</h2>
+            <h2>business reinvent itself</h2>
+            <p>We reached here with our hard work and dedication</p>
+          </div>
+
+          <div class="ach-container">
+            <div>
+              <div class="ach-stat">
+                <div>
+                  <img src="IMAGES/Icon (7).png" alt="" />
+                </div>
+                <div>
+                  <h4>2,245,341</h4>
+                  <p>Members</p>
+                </div>
+              </div>
+              <div class="ach-stat">
+                <div>
+                  <img src="IMAGES/Icon (5).png" alt="" />
+                </div>
+                <div>
+                  <h4>828,867</h4>
+                  <p>Event Bookins</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <div>
+              <div class="ach-stat">
+                <div>
+                  <img src="IMAGES/Icon (4).png" alt="" />
+                </div>
+                <div>
+                  <h4>46,328</h4>
+                  <p>Clubs</p>
+                </div>
+              </div>
+              <div class="ach-stat">
+                <div>
+                  <img src="IMAGES/Icon (6).png" alt="" />
+                </div>
+                <div>
+                  <h4>1,926,436</h4>
+                  <p>payments</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
+      </div>
     </main>
 
     <footer></footer>
-
-</body>
+  </body>
 </html>
