--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </ul>
         </div>
         <div class="login-section">
-          <a href="">Login</a>
+          <a class="logs" href="">Login</a>
           <button class="btn">Sign up</button>
         </div>
       </nav>
@@ -37,7 +37,7 @@
           <h5>
             Where to grow your business as a photographer: site or social media?
           </h5>
-          <button>Register</button>
+          <button class="btn">Register</button>
         </div>
         <div>
           <img src="IMAGES/Illustration.png" alt="" />
@@ -94,84 +94,197 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <div id="unlock">
-          <div>
-            <img src="IMAGES/rafiki.png" alt="" />
-          </div>
-
-          <div class="unlock-text">
-            <h1>The unseen of spending three years at Pixelgrade</h1>
-
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
-              amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
-              Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
-              tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
-              Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
-              elementum pulvinar odio.
-            </p>
-
-            <button><a href="">Learn More</a></button>
-          </div>
+      <div id="unlock">
+        <div>
+          <img src="IMAGES/rafiki.png" alt="" />
         </div>
 
-        <!-- <div id="achievements">
-          <div class="arch-text">
-            <h2>Helping a local</h2>
-            <h2>business reinvent itself</h2>
-            <p>We reached here with our hard work and dedication</p>
-          </div>
+        <div class="unlock-text">
+          <h1>The unseen of spending three years at Pixelgrade</h1>
 
-          <div class="ach-container">
-            <div>
-              <div class="ach-stat">
-                <div>
-                  <img src="IMAGES/Icon (7).png" alt="" />
-                </div>
-                <div>
-                  <h4>2,245,341</h4>
-                  <p>Members</p>
-                </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+            amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+            Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+            tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+            Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+            elementum pulvinar odio.
+          </p>
+
+          <button class="btn">Learn More</button>
+        </div>
+      </div>
+
+      <div id="achievements">
+        <div class="ach-text">
+          <h1>Helping a local</h1>
+          <h1 class="ach-text-green">business reinvent itself</h1>
+          <p>We reached here with our hard work and dedication</p>
+        </div>
+
+        <div class="ach-container">
+          <div class="ach">
+            <div class="ach-stat">
+              <div>
+                <img src="IMAGES/Icon (7).png" alt="" />
               </div>
-              <div class="ach-stat">
-                <div>
-                  <img src="IMAGES/Icon (5).png" alt="" />
-                </div>
-                <div>
-                  <h4>828,867</h4>
-                  <p>Event Bookins</p>
-                </div>
+              <div>
+                <h2>2,245,341</h2>
+                <p>Members</p>
+              </div>
+            </div>
+            <div class="ach-stat">
+              <div>
+                <img src="IMAGES/Icon (5).png" alt="" />
+              </div>
+              <div>
+                <h2>828,867</h2>
+                <p>Event Bookings</p>
               </div>
             </div>
           </div>
 
+          <div class="ach">
+            <div class="ach-stat">
+              <div>
+                <img src="IMAGES/Icon (4).png" alt="" />
+              </div>
+              <div>
+                <h2>46,328</h2>
+                <p>Clubs</p>
+              </div>
+            </div>
+            <div class="ach-stat">
+              <div>
+                <img src="IMAGES/Icon (6).png" alt="" />
+              </div>
+              <div>
+                <h2>1,926,436</h2>
+                <p>payments</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="cal">
+        <img src="IMAGES/pana.png" alt="" />
+        <div class="cal-text">
+          <div class="cal-text-h1">
+            <h1>How to design your site footer like we did</h1>
+          </div>
+
+          <p>
+            Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor,
+            augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque
+            elit erat a magna. Donec quis erat at libero ultrices mollis. In hac
+            habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi
+            facilisis finibus.
+          </p>
           <div>
-            <div>
-              <div class="ach-stat">
-                <div>
-                  <img src="IMAGES/Icon (4).png" alt="" />
-                </div>
-                <div>
-                  <h4>46,328</h4>
-                  <p>Clubs</p>
-                </div>
-              </div>
-              <div class="ach-stat">
-                <div>
-                  <img src="IMAGES/Icon (6).png" alt="" />
-                </div>
-                <div>
-                  <h4>1,926,436</h4>
-                  <p>payments</p>
-                </div>
-              </div>
+            <button class="btn">Learn more</button>
+          </div>
+        </div>
+      </div>
+
+      <div id="customers">
+        <div>
+          <img src="IMAGES/image 9.png" alt="" />
+        </div>
+        <div>
+          <div class="customers-texts">
+            <div class="customers-p">
+              <p>
+                Maecenas dignissim justo eget nulla rutrum molestie. Maecenas
+                lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin
+                eu enim metus. Vivamus sed libero ornare, tristique quam in,
+                gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi
+                laoreet elit at ligula molestie, nec molestie mi blandit.
+                Suspendisse cursus tellus sed augue ultrices, quis tristique
+                nulla sodales.
+              </p>
+            </div>
+
+            <h3>Tim Smith</h3>
+
+            <p>British Dragon Boat Racing Association</p>
+          </div>
+
+          <div class="customers-logos">
+            <div class="customers-logos-1">
+              <img src="IMAGES/Frame 10.png" alt="" />
+            </div>
+            <div class="customers-logo-2">
+              <a href=""
+                >Meet all customers <img src="IMAGES/Right.png" alt=""
+              /></a>
             </div>
           </div>
-        </div> -->
+        </div>
+      </div>
+
+      <div id="community-update">
+        <h2>Caring is the new marketing</h2>
+        <p>
+          The Nexcent blog is the best place to read about the latest membership
+          insights, trends and more. See who's joining the community, read about
+          how our community are increasing their membership income and lot's
+          more.
+        </p>
+
+        <divm class="community-update-pictures">
+          <div><img src="IMAGES/1.png" alt="" /></div>
+          <div><img src="IMAGES/2.png" alt="" /></div>
+          <div><img src="IMAGES/3.png" alt="" /></div>
+        </divm>
+      </div>
+
+      <div id="pre-footer">
+        <div class="pre-footer-text">
+          <h1>Pellentesque suscipit fringilla libero eu.</h1>
+        </div>
+
+        <button class="btn">
+          Get a demo <img src="IMAGES/Down.png" alt="" />
+        </button>
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="props-logos">
+        <img src="IMAGES/Logo(1).png" alt="" />
+        <div class="props-logos-p">
+          <p>Copyright © 2020 Nexcent ltd.</p>
+          <p>All rights reserved</p>
+        </div>
+        <img src="IMAGES/Social Links.png" alt="" />
+      </div>
+      <div class="props">
+        <h3>Company</h3>
+        <p>About us</p>
+        <p>Blog</p>
+        <p>Contact us</p>
+        <p>Pricing</p>
+        <p>Testimonials</p>
+      </div>
+      <div class="props">
+        <h3>Support</h3>
+        <p>Help center</p>
+        <p>Terms of service</p>
+        <p>Legal</p>
+        <p>Privacy policy</p>
+        <p>Status</p>
+      </div>
+      <div>
+        <h3>Stay up to date</h3>
+        <input
+          type="text"
+          class="email-input"
+          placeholder="Your email address"
+        />
+      </div>
+    </footer>
   </body>
 </html>
