done with small screen resp

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
           more.
         </p>
 
-        <divm class="community-update-pictures">
+        <div class="community-update-pictures">
           <div><img src="IMAGES/1.png" alt="" /></div>
           <div><img src="IMAGES/2.png" alt="" /></div>
           <div><img src="IMAGES/3.png" alt="" /></div>
-        </divm>
+        </div>
       </div>
 
       <div id="pre-footer">
@@ -263,21 +263,21 @@
       </div>
       <div class="props">
         <h3>Company</h3>
-        <p>About us</p>
-        <p>Blog</p>
-        <p>Contact us</p>
-        <p>Pricing</p>
-        <p>Testimonials</p>
+        <p><a href="">About us</a></p>
+        <p><a href="">Blog</a></p>
+        <p><a href="">Contact us</a></p>
+        <p><a href="">Pricing</a></p>
+        <p><a href="">Testimonials</a></p>
       </div>
       <div class="props">
         <h3>Support</h3>
-        <p>Help center</p>
-        <p>Terms of service</p>
-        <p>Legal</p>
-        <p>Privacy policy</p>
-        <p>Status</p>
+        <p><a href="">Help center</a></p>
+        <p><a href="">Terms of service</a></p>
+        <p><a href="">Legal</a></p>
+        <p><a href="">Privacy policy</a></p>
+        <p><a href="">Status</a></p>
       </div>
-      <div>
+      <div class="form-area">
         <h3>Stay up to date</h3>
         <input
           type="text"
