fixed small screen resp

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>
 
       <div id="customers">
-        <div>
+        <div class="customers-logo">
           <img src="IMAGES/image 9.png" alt="" />
         </div>
         <div>
@@ -227,17 +227,48 @@
 
       <div id="community-update">
         <h2>Caring is the new marketing</h2>
-        <p>
-          The Nexcent blog is the best place to read about the latest membership
-          insights, trends and more. See who's joining the community, read about
-          how our community are increasing their membership income and lot's
-          more.
-        </p>
+        <div class="community-update-p">
+          <p>
+            The Nexcent blog is the best place to read about the latest
+            membership insights, trends and more. See who's joining the
+            community, read about how our community are increasing their
+            membership income and lot's more.
+          </p>
+        </div>
 
         <div class="community-update-pictures">
-          <div><img src="IMAGES/1.png" alt="" /></div>
-          <div><img src="IMAGES/2.png" alt="" /></div>
-          <div><img src="IMAGES/3.png" alt="" /></div>
+          <div>
+            <img src="IMAGES/image 18.png" alt="" />
+            <div class="community-readmore">
+              <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+              <div>
+                <a href="">Read more <img src="IMAGES/Right.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <img src="IMAGES/image 19.png" alt="" />
+            <div class="community-readmore">
+              <p>
+                What are your safeguarding responsibilities and how can you
+                manage them?
+              </p>
+              <div>
+                <a href="">Read more <img src="IMAGES/Right.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <img src="IMAGES/image 20.png" alt="" />
+            <div class="community-readmore">
+              <p>Revamping the Membership Model with Triathlon Australia</p>
+              <div>
+                <a href="">Read more <img src="IMAGES/Right.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
